libs/wingc/src/jsify/snapshots/inflight_field.snap
---
source: libs/wingc/src/jsify/tests.rs
---
## Code

```w

    class A {
      inflight x: str;
      inflight init() {
        this.x = "hello";
      }

      inflight method() {
        log(this.x);
      }
    }
    
```

## inflight.A-1.js

```js
module.exports = function({  }) {
  class A {
    constructor({  }) {
    }
    async method() {
      {console.log(this.x)};
    }
    async $inflight_init() {
      this.x = "hello";
    }
  }
  return A;
}
```

## preflight.js

```js
const $stdlib = require('@winglang/sdk');
const $constructs = require('constructs');
const $outdir = process.env.WING_SYNTH_DIR ?? ".";
const $wing_is_test = process.env.WING_IS_TEST === "true";
const std = $stdlib.std;
class $Root extends $constructs.Construct {
  constructor(scope, id) {
    super(scope, id);
    class A extends $constructs.Construct {
      constructor(scope, id, ) {
        super(scope, id);
      }
      static _toInflightType(context) {
        return `
          require("./inflight.A-1.js")({
          })
        `;
      }
      _toInflight() {
        return `
          (await (async () => {
            const AClient = ${A._toInflightType(this)};
            const client = new AClient({
            });
            if (client.$inflight_init) { await client.$inflight_init(); }
            return client;
          })())
        `;
      }
      _getInflightOps() {
        return ["x", "method", "$inflight_init"];
      }
      _registerBind(host, ops) {
      }
      static _registerTypeBind(host, ops) {
      }
    }
  }
}
const $App = $stdlib.core.App.for(process.env.WING_TARGET);
new $App({ outdir: $outdir, name: "main", rootConstruct: $Root, plugins: $plugins, isTestEnvironment: $wing_is_test, entrypointDir: process.env['WING_SOURCE_DIR'], rootId: process.env['WING_ROOT_ID'] }).synth();
```

